--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -7,8 +7,8 @@
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
-        <referenceContainer name="header-wrapper">
-            <block name="customer-service-menu" template="Codfish_AssistedCart::header/customer-service-menu.phtml"/>
+        <referenceContainer name="header.panel">
+            <block name="customer-service-menu" template="Codfish_AssistedCart::header/customer-service-menu.phtml" after="-"/>
         </referenceContainer>
     </body>
 </page>
