--- a/view/frontend/templates/header/customer-service-menu.phtml
+++ b/view/frontend/templates/header/customer-service-menu.phtml
@@ -12,7 +12,7 @@
     <button class="assisted-cart-menu__trigger" id="assisted-cart-menu-trigger">
         <?=__('Customer Service')?>
     </button>
-    <ul class="assisted-cart-menu__list" style="display: none !important;">
+    <ul class="assisted-cart-menu__list" style="display: none !important;" id="assisted_cart_customer_service_menu_list">
         <li class="assisted-cart-menu__list-item">
             <a
                 href="<?= $escaper->escapeUrl($block->getUrl('help-center')) ?>"
